--- a/Medicontrol/Medicontrol.csproj
+++ b/Medicontrol/Medicontrol.csproj
@@ -207,6 +207,7 @@
     <Content Include="Facturacion\ModificarPaciente.aspx" />
     <Content Include="Facturacion\CuentasporCobrar.aspx" />
     <Content Include="Facturacion\Abonos.aspx" />
+    <Content Include="Facturacion\AT2-InformeAtencionInicialUrgencias.aspx" />
     <Content Include="Imagenes\Delete-icon %281%29.png" />
     <Content Include="Imagenes\ico-print.png" />
     <Content Include="Imagenes\logoimsalud.jpg" />
@@ -636,6 +637,13 @@
     </Compile>
     <Compile Include="Facturacion\Abonos.aspx.designer.cs">
       <DependentUpon>Abonos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Facturacion\AT2-InformeAtencionInicialUrgencias.aspx.cs">
+      <DependentUpon>AT2-InformeAtencionInicialUrgencias.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Facturacion\AT2-InformeAtencionInicialUrgencias.aspx.designer.cs">
+      <DependentUpon>AT2-InformeAtencionInicialUrgencias.aspx</DependentUpon>
     </Compile>
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
